[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.588
anchor_top = 0.443
anchor_right = 0.814
anchor_bottom = 0.663
margin_left = -152.112
margin_top = 25.2
margin_right = -318.536
margin_bottom = -66.8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
margin_right = 86.0
margin_bottom = 20.0
text = "Resume"

[node name="ButtonRestart" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 86.0
margin_bottom = 44.0
text = "REstart"

[node name="ButtonReturnToMenu" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 86.0
margin_bottom = 68.0
text = "MAin menu"
[connection signal="pressed" from="VBoxContainer/ButtonResume" to="." method="on_signal_button_resume"]
[connection signal="pressed" from="VBoxContainer/ButtonRestart" to="." method="on_signal_button_restart"]
[connection signal="pressed" from="VBoxContainer/ButtonReturnToMenu" to="." method="on_signal_button_return_to_menu"]
